--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,34 +21,27 @@ uri.atom.protocol.endpoint.default=${uri.prefix.node.default}/protocol/owner
 uri.prefix.owner=${won.owner.uri}
 uri.owner.protocol.endpoint=${uri.prefix.owner}/protocol
 
-
-
+# BotContext can either be memoryBotContext or mongoBotContext for now
 botContext.impl=memoryBotContext
 
-botContext.mongodb.user=won
-botContext.mongodb.pass=won
-botContext.mongodb.host=localhost
-botContext.mongodb.port=27017
-botContext.mongodb.database=won
-
-monitoring.output.dir=
-#milliseconds between two consecutive monitoring statistics dumps
-monitoring.interval.seconds=3600
-#reset the monitoring stats after output? (allows for comparing periods to track change more clearly)
-monitoring.reset.after.output=true
-
-#configurable properties of particular bots
-atomCreatorBot.period=3000
+# The following attributes are only necessary if mongoBotContext is chosen
+# botContext.mongodb.user=won
+# botContext.mongodb.pass=won
+# botContext.mongodb.host=localhost
+# botContext.mongodb.port=27017
+# botContext.mongodb.database=won
+# ########################################################################
 
 keystores.password=changeit
+keystores.directory=${WON_KEYSTORE_DIR}
 
 # keystore properties
 keystore.password=${keystores.password}
-keystore.location=${WON_CONFIG_DIR}/bot-keys.jks
+keystore.location=${keystores.directory}/bot-keys.jks
 
 # truststore properties
 truststore.password=${keystores.password}
-truststore.location=${WON_CONFIG_DIR}/owner-trusted-certs.jks
+truststore.location=${keystores.directory}/owner-trusted-certs.jks
 
 # DB - Alternative: local hsql
 db.sql.jdbcDriverClass=org.hsqldb.jdbcDriver
